--- a/eBooksDT/eBooksDT/Views/MostPopularPage.xaml
+++ b/eBooksDT/eBooksDT/Views/MostPopularPage.xaml
@@ -14,23 +14,23 @@
     <ListView ItemsSource="{Binding MostPopularList}" x:Name="lsMovies"
 		RowHeight="120" 
 		CachingStrategy="RecycleElement">
-		<behaviors:Interaction.Behaviors>
+        <behaviors:Interaction.Behaviors>
             <behaviors:BehaviorCollection>
                 <behaviors:EventToCommand EventName="ItemTapped" Command="{Binding GoToDetailPage}" PassEventArgument="True" />
             </behaviors:BehaviorCollection>
         </behaviors:Interaction.Behaviors>
-		<ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-					<Grid Margin="2" BackgroundColor="White">
-			            <Grid.ColumnDefinitions>
-			                <ColumnDefinition Width="1*" />
-			                <ColumnDefinition Width="4*" />
-			            </Grid.ColumnDefinitions>
-			            <ffimageloading:CachedImage 
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+                    <Grid Margin="2" BackgroundColor="White">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="4*" />
+                        </Grid.ColumnDefinitions>
+                        <ffimageloading:CachedImage 
 										x:Name="pPhoto" 
 										HorizontalOptions="Start"
-										Source="{Binding PosterUrl}"  
+										Source="{Binding Image}"  
 										ErrorPlaceholder="error.png" 
 										TransparencyEnabled="True" 
 										CacheDuration="1"
@@ -38,9 +38,9 @@
 										Grid.Column="0"
 										DownsampleToViewSize="true" />
 
-			            <StackLayout Grid.Column="1" Margin="12, 0, 0, 0" VerticalOptions="Start">
-						<StackLayout Orientation="Horizontal" Spacing="3" >
-							<ffimageloading:CachedImage 
+                        <StackLayout Grid.Column="1" Margin="12, 0, 0, 0" VerticalOptions="Start">
+                            <StackLayout Orientation="Horizontal" Spacing="3" >
+                                <ffimageloading:CachedImage 
 										x:Name="pStar" 
 										HorizontalOptions="Start"
 										Source="star"  
@@ -50,21 +50,16 @@
 										Aspect="AspectFit"
 										HeightRequest="13"
 										DownsampleToViewSize="true" />
-							<Label Text="{Binding Score}" FontSize="18" TextColor="#58666e" />
-							<Label Text=" - " FontSize="16" TextColor="#58666e" FontAttributes="Bold" />
-							<Label Text="{Binding ComposedTitle}" FontSize="16" TextColor="#58666e" FontAttributes="Bold" />
-						</StackLayout>
-			                <Label Text="{Binding GenresCommaSeparated}" FontSize="14" TextColor="Gray" />
-			                <StackLayout Orientation="Horizontal">
-			                	<Button Text="+ Watchlist" Command="{Binding Source={x:Reference PopularPage}, Path=BindingContext.AddWatchListCommand}" CommandParameter="{Binding .}" />
-								<Button Text="+ Seen" Command="{Binding Source={x:Reference PopularPage}, Path=BindingContext.AddSeenCommand}" CommandParameter="{Binding .}" />
-								<Button Text="+ List" Command="{Binding Source={x:Reference PopularPage}, Path=BindingContext.AddListCommand}" CommandParameter="{Binding .}" />
-			                </StackLayout>
-			            </StackLayout>
-			        </Grid>
-					 </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-		
+                                <Label Text="{Binding ID}" FontSize="18" TextColor="#58666e" />
+                                <Label Text=" - " FontSize="16" TextColor="#58666e" FontAttributes="Bold" />
+                                <Label Text="{Binding Title}" FontSize="16" TextColor="#58666e" FontAttributes="Bold" />
+                            </StackLayout>
+                            <Label Text="{Binding Description}" FontSize="14" TextColor="Gray" />
+                        </StackLayout>
+                    </Grid>
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
     </ListView>
 </ContentPage>
