--- a/eBooksDT/eBooksDT/CustomControls/BookItem.xaml
+++ b/eBooksDT/eBooksDT/CustomControls/BookItem.xaml
@@ -2,7 +2,7 @@
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms" 
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
           xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"	
-          x:Class="eBooksDT.CustomControls.MovieItem">
+          x:Class="eBooksDT.CustomControls.BookItem">
     <Grid Margin="2" BackgroundColor="White">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
