--- a/eBooksDT/eBooksDT/Views/BookListInfoPage.xaml
+++ b/eBooksDT/eBooksDT/Views/BookListInfoPage.xaml
@@ -4,9 +4,9 @@
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-             x:Class="eBooksDT.Views.MovieListInfoPage"
+             x:Class="eBooksDT.Views.BookListInfoPage"
 			 Title="{Binding ListTitle}">
-    <ListView ItemsSource="{Binding MoviesList}" x:Name="lsMovies"
+    <ListView ItemsSource="{Binding BooksList}" x:Name="lsBooks"
 		RowHeight="120" 
 		CachingStrategy="RecycleElement">
         <ListView.ItemTemplate>
@@ -40,9 +40,9 @@
 							Aspect="AspectFit"
 							HeightRequest="13"
 							DownsampleToViewSize="true" />
-                                <Label Text="{Binding MovieRate}" FontSize="18" TextColor="#58666e" />
+                                <Label Text="{Binding BookRate}" FontSize="18" TextColor="#58666e" />
                                 <Label Text=" - " FontSize="18" TextColor="#58666e" FontAttributes="Bold" />
-                                <Label Text="{Binding MovieName}" FontSize="18" TextColor="#58666e" FontAttributes="Bold" />
+                                <Label Text="{Binding BookName}" FontSize="18" TextColor="#58666e" FontAttributes="Bold" />
                             </StackLayout>
                             <Label Text="Comedy, Drama, Action, Suspense" FontSize="14" TextColor="Gray" />
                         </StackLayout>
