--- a/eBooksDT/eBooksDT/Views/BookListsPage.xaml
+++ b/eBooksDT/eBooksDT/Views/BookListsPage.xaml
@@ -4,11 +4,11 @@
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              xmlns:behaviors="clr-namespace:Corcav.Behaviors;assembly=Corcav.Behaviors"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="eBooksDT.Views.MovieListsPage"
+             x:Class="eBooksDT.Views.BookListsPage"
              Title="Custom Lists">
     <StackLayout>
         <Label Text="No List found" IsVisible="{Binding HasData}"></Label>
-        <ListView CachingStrategy="RecycleElement" ItemsSource="{Binding MovieList}">
+        <ListView CachingStrategy="RecycleElement" ItemsSource="{Binding BookList}">
             <behaviors:Interaction.Behaviors>
                 <behaviors:BehaviorCollection>
                     <behaviors:EventToCommand EventName="ItemTapped" Command="{Binding SelectListCommand}" PassEventArgument="True" />
